syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "OrderReturnExtraProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// Communication Event Return
message CommunicationEventReturnData {
    option (routines.entity_type) = "CommunicationEventReturn";
    option (routines.keys).keys = "return_id, communication_event_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: returnId, communicationEventId
    // fields
    string return_id = 1 [(routines.opts).field_type = "id"];
    string communication_event_id = 2 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    string id = 5 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 8;
    map<string, google.protobuf.Any> attachments = 9;
}


message CommunicationEventReturnKey{
    string return_id = 1 [(routines.opts).field_type = "id"];
    string communication_event_id = 2 [(routines.opts).field_type = "id"];
}

message CommunicationEventReturnList{
    repeated CommunicationEventReturnData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListCommunicationEventReturns` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Return Adjustment
message ReturnAdjustmentData {
    option (routines.entity_type) = "ReturnAdjustment";
    option (routines.keys).keys = "return_adjustment_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: returnAdjustmentId
    // fields
    string return_adjustment_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string return_adjustment_type_id = 2 [(routines.opts).field_type = "id"];
    string return_id = 3 [(routines.opts).field_type = "id"];
    string return_item_seq_id = 4 [(routines.opts).field_type = "id"];
    string ship_group_seq_id = 5 [(routines.opts).field_type = "id"];
    string comments = 6 [(routines.opts).field_type = "comment"];
    string description = 7 [(routines.opts).field_type = "description"];
    string return_type_id = 8 [(routines.opts).field_type = "id"];
    string order_adjustment_id = 9 [(routines.opts).field_type = "id"];
    routines.Currency amount = 10 [(routines.opts).field_type = "currency-precise"];
    string product_promo_id = 11 [(routines.opts).field_type = "id"];
    string product_promo_rule_id = 12 [(routines.opts).field_type = "id"];
    string product_promo_action_seq_id = 13 [(routines.opts).field_type = "id"];
    string product_feature_id = 14 [(routines.opts).field_type = "id"];
    string corresponding_product_id = 15 [(routines.opts).field_type = "id"];
    string tax_authority_rate_seq_id = 16 [(routines.opts).field_type = "id"];
    string source_reference_id = 17 [(routines.opts).field_type = "id-long"];
    routines.FixedPoint source_percentage = 18 [(routines.opts).field_type = "fixed-point"];
    string customer_reference_id = 19 [(routines.opts).field_type = "id-long"];
    string primary_geo_id = 20 [(routines.opts).field_type = "id"];
    string secondary_geo_id = 21 [(routines.opts).field_type = "id"];
    routines.Currency exempt_amount = 22 [(routines.opts).field_type = "currency-amount"];
    string tax_auth_geo_id = 23 [(routines.opts).field_type = "id"];
    string tax_auth_party_id = 24 [(routines.opts).field_type = "id"];
    string override_gl_account_id = 25 [(routines.opts).field_type = "id"];
    routines.Indicator include_in_tax = 26 [(routines.opts).field_type = "indicator"];
    routines.Indicator include_in_shipping = 27 [(routines.opts).field_type = "indicator"];
    google.protobuf.Timestamp created_date = 28 [(routines.opts).field_type = "date-time"];
    string created_by_user_login = 29 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_modified_date = 30 [(routines.opts).field_type = "date-time"];
    string last_modified_by_user_login = 31 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp last_updated_tx_stamp = 32 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 33 [(routines.opts).field_type = "date-time"];
    string tenant_id = 34 [(routines.opts).field_type = "id"];
            
             

    // extra
    google.protobuf.Struct extra = 50;
    map<string, google.protobuf.Any> attachments = 51;
}


message ReturnAdjustmentKey{
    string return_adjustment_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ReturnAdjustmentList{
    repeated ReturnAdjustmentData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListReturnAdjustments` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Retrun Contact Mechanism
message ReturnContactMechData {
    option (routines.entity_type) = "ReturnContactMech";
    option (routines.keys).keys = "return_id, contact_mech_purpose_type_id, contact_mech_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: returnId, contactMechPurposeTypeId, contactMechId
    // fields
    string return_id = 1 [(routines.opts).field_type = "id"];
    string contact_mech_purpose_type_id = 2 [(routines.opts).field_type = "id"];
    string contact_mech_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string id = 6 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message ReturnContactMechKey{
    string return_id = 1 [(routines.opts).field_type = "id"];
    string contact_mech_purpose_type_id = 2 [(routines.opts).field_type = "id"];
    string contact_mech_id = 3 [(routines.opts).field_type = "id"];
}

message ReturnContactMechList{
    repeated ReturnContactMechData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListReturnContactMeches` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Records the quantity and amount returned to an inventory item from a return item.
message ReturnItemBillingData {
    option (routines.entity_type) = "ReturnItemBilling";
    option (routines.keys).keys = "return_id, return_item_seq_id, invoice_id, invoice_item_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: returnId, returnItemSeqId, invoiceId, invoiceItemSeqId
    // fields
    string return_id = 1 [(routines.opts).field_type = "id"];
    string return_item_seq_id = 2 [(routines.opts).field_type = "id"];
    string invoice_id = 3 [(routines.opts).field_type = "id"];
    string invoice_item_seq_id = 4 [(routines.opts).field_type = "id"];
    string shipment_receipt_id = 5 [(routines.opts).field_type = "id"];
    routines.FixedPoint quantity = 6 [(routines.opts).field_type = "fixed-point"];
    routines.Currency amount = 7 [(routines.opts).field_type = "currency-amount"];
    google.protobuf.Timestamp last_updated_tx_stamp = 8 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    string id = 10 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 16;
    map<string, google.protobuf.Any> attachments = 17;
}


message ReturnItemBillingKey{
    string return_id = 1 [(routines.opts).field_type = "id"];
    string return_item_seq_id = 2 [(routines.opts).field_type = "id"];
    string invoice_id = 3 [(routines.opts).field_type = "id"];
    string invoice_item_seq_id = 4 [(routines.opts).field_type = "id"];
}

message ReturnItemBillingList{
    repeated ReturnItemBillingData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListReturnItemBillings` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// The Return Item Response
message ReturnItemResponseData {
    option (routines.entity_type) = "ReturnItemResponse";
    option (routines.keys).keys = "return_item_response_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: returnItemResponseId
    // fields
    string return_item_response_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string order_payment_preference_id = 2 [(routines.opts).field_type = "id"];
    string replacement_order_id = 3 [(routines.opts).field_type = "id"];
    string payment_id = 4 [(routines.opts).field_type = "id"];
    string billing_account_id = 5 [(routines.opts).field_type = "id"];
    string fin_account_trans_id = 6 [(routines.opts).field_type = "id"];
    routines.Currency response_amount = 7 [(routines.opts).field_type = "currency-amount"];
    google.protobuf.Timestamp response_date = 8 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    string tenant_id = 11 [(routines.opts).field_type = "id"];
            
             

    // extra
    google.protobuf.Struct extra = 19;
    map<string, google.protobuf.Any> attachments = 20;
}


message ReturnItemResponseKey{
    string return_item_response_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ReturnItemResponseList{
    repeated ReturnItemResponseData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListReturnItemResponses` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Return Item And Shipment Association
message ReturnItemShipmentData {
    option (routines.entity_type) = "ReturnItemShipment";
    option (routines.keys).keys = "return_id, return_item_seq_id, shipment_id, shipment_item_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: returnId, returnItemSeqId, shipmentId, shipmentItemSeqId
    // fields
    string return_id = 1 [(routines.opts).field_type = "id"];
    string return_item_seq_id = 2 [(routines.opts).field_type = "id"];
    string shipment_id = 3 [(routines.opts).field_type = "id"];
    string shipment_item_seq_id = 4 [(routines.opts).field_type = "id"];
    routines.FixedPoint quantity = 5 [(routines.opts).field_type = "fixed-point"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    string id = 8 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 13;
    map<string, google.protobuf.Any> attachments = 14;
}


message ReturnItemShipmentKey{
    string return_id = 1 [(routines.opts).field_type = "id"];
    string return_item_seq_id = 2 [(routines.opts).field_type = "id"];
    string shipment_id = 3 [(routines.opts).field_type = "id"];
    string shipment_item_seq_id = 4 [(routines.opts).field_type = "id"];
}

message ReturnItemShipmentList{
    repeated ReturnItemShipmentData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListReturnItemShipments` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Return Status History
message ReturnStatusData {
    option (routines.entity_type) = "ReturnStatus";
    option (routines.keys).keys = "return_status_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: returnStatusId
    // fields
    string return_status_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string status_id = 2 [(routines.opts).field_type = "id"];
    string return_id = 3 [(routines.opts).field_type = "id"];
    string return_item_seq_id = 4 [(routines.opts).field_type = "id"];
    string change_by_user_login_id = 5 [(routines.opts).field_type = "id-vlong"];
    google.protobuf.Timestamp status_datetime = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_updated_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 8 [(routines.opts).field_type = "date-time"];
    string tenant_id = 9 [(routines.opts).field_type = "id"];
            
             

    // extra
    google.protobuf.Struct extra = 15;
    map<string, google.protobuf.Any> attachments = 16;
}


message ReturnStatusKey{
    string return_status_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ReturnStatusList{
    repeated ReturnStatusData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListReturnStatuses` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


